--- a/FCF3_FIRMWARE/unit_tests/makefile
+++ b/FCF3_FIRMWARE/unit_tests/makefile
@@ -4,7 +4,8 @@ tests_main: tests_main.cpp
 			g++ -c tests_main.cpp -o tests_main.o 
 tests: tests_main.o
 		g++  $(INCLUDE_DIR) -c $(SALLOC_DIR) -o salloc.o
-		g++   $(INCLUDE_DIR) -c tests_salloc.cpp  -o tests_salloc.o
-		g++  salloc.o tests_main.o tests_salloc.o -o tests.out
+		g++   $(INCLUDE_DIR) -c tests_salloc.cpp -o tests_salloc.o
+		g++    tests_main.o salloc.o tests_salloc.o   -o tests.out
+		./tests.out
 clean: 
 		rm -rf *.o *.out
